--- a/index.html
+++ b/index.html
@@ -137,59 +137,77 @@
           </li>
         </ul>
       </section>
-      <!-- <section>
-        <h2>Our Portfolio</h2>
-        <ul>
-          <li>
-            <img src="/images/img-1-1.jpg"
-            width="360"
-            height="300"
-            alt="Banking App">
-            <h3>Banking App</h3>
-            <p>App</p>
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <img
+              src="/images/img-1-1.jpg"
+              width="360"
+              height="300"
+              alt="Banking App"
+              class="portfolio-image"
+            />
+            <h3 class="portfolio-subtitle">Banking App</h3>
+            <p class="portfolio-item-text">App</p>
           </li>
-          <li></li>
-            <img src="/images/img-1-2.jpg"
-            width="360"
-            height="300"
-            alt="Cashless Payment">
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+          <li class="portfolio-item">
+            <img
+              src="/images/img-1-2.jpg"
+              width="360"
+              height="300"
+              alt="Cashless Payment"
+              class="portfolio-image"
+            />
+            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
-          <li></li>
-            <img src="/images/img-1-3.jpg"
-            width="360"
-            height="300"
-            alt="Meditation App">
-            <h3>Meditation App</h3>
-            <p>App</p>
+          <li class="portfolio-item">
+            <img
+              src="/images/img-1-3.jpg"
+              width="360"
+              height="300"
+              alt="Meditation App"
+              class="portfolio-image"
+            />
+            <h3 class="portfolio-subtitle">Meditation App</h3>
+            <p class="portfolio-item-text">App</p>
           </li>
-          <li></li>
-            <img src="/images/img-1-4.jpg"
-            width="360"
-            height="300"
-            alt="Taxi Service">
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+          <li class="portfolio-item">
+            <img
+              src="/images/img-1-4.jpg"
+              width="360"
+              height="300"
+              alt="Taxi Service"
+              class="portfolio-image"
+            />
+            <h3 class="portfolio-subtitle">Taxi Service</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
-          <li></li>
-            <img src="/images/img-1-5.jpg"
-            width="360"
-            height="300"
-            alt="Screen Illustrations">
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+          <li class="portfolio-item">
+            <img
+              src="/images/img-1-5.jpg"
+              width="360"
+              height="300"
+              alt="Screen Illustrations"
+              class="portfolio-image"
+            />
+            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+            <p class="portfolio-item-text">Design</p>
           </li>
-          <li></li>
-            <img src="/images/img-1-6.jpg"
-            width="360"
-            height="300"
-            alt="Online Courses">
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+          <li class="portfolio-item">
+            <img
+              src="/images/img-1-6.jpg"
+              width="360"
+              height="300"
+              alt="Online Courses"
+              class="portfolio-image"
+            />
+            <h3 class="portfolio-subtitle">Online Courses</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
         </ul>
-      </section> -->
+      </section>
     </main>
     <footer class="footer">
       <a class="footer-logo" href="./index.html"
