--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <ul class="portfolio-list">
           <li class="portfolio-item">
             <img
-              src="/images/img-1-1.jpg"
+              src="./images/img-1-1.jpg"
               width="360"
               height="300"
               alt="Banking App"
@@ -153,7 +153,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="/images/img-1-2.jpg"
+              src="./images/img-1-2.jpg"
               width="360"
               height="300"
               alt="Cashless Payment"
@@ -164,7 +164,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="/images/img-1-3.jpg"
+              src="./images/img-1-3.jpg"
               width="360"
               height="300"
               alt="Meditation App"
@@ -175,7 +175,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="/images/img-1-4.jpg"
+              src="./images/img-1-4.jpg"
               width="360"
               height="300"
               alt="Taxi Service"
@@ -186,7 +186,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="/images/img-1-5.jpg"
+              src="./images/img-1-5.jpg"
               width="360"
               height="300"
               alt="Screen Illustrations"
@@ -197,7 +197,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="/images/img-1-6.jpg"
+              src="./images/img-1-6.jpg"
               width="360"
               height="300"
               alt="Online Courses"
