--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
       <nav class="header-navigation">
         <a class="header-logo" href="./index.html"
-          ><span class="header-logo-pic">Web</span>Studio</a
+          >Web<span class="header-logo-pic">Studio</span></a
         >
         <ul class="header-menu-list">
           <li class="header-menu-item">
@@ -211,7 +211,7 @@
     </main>
     <footer class="footer">
       <a class="footer-logo" href="./index.html"
-        ><span class="footer-logo-pic">Web</span>Studio</a
+        >Web<span class="footer-logo-pic">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
