--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
             </p>
           </li>
           <li class="worked-item">
-            <h3 class="worked-subtitle">Punctuality</h3>
+            <h3 class="worked-subitle">Punctuality</h3>
             <p class="worked-item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="worked-item">
-            <h3 class="worked-subtitle">Diligence</h3>
+            <h3 class="worked-subitle">Diligence</h3>
             <p class="worked-item-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="worked-item">
-            <h3 class="worked-subtitle">Technologies</h3>
+            <h3 class="worked-subitle">Technologies</h3>
             <p class="worked-item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
