--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </p>
           </li>
           <li class="worked-item">
-            <h3 class="worked-subitle">Punctuality</h3>
+            <h3 class="wrked-subitle">Punctuality</h3>
             <p class="worked-item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
