--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <header class="header">
       <nav class="header-navigation">
         <a class="header-logo" href="./index.html"
-          >Web<span class="header-logo-pic">Studio</span></a
+          >Web<span class="header-logo-pic" href>Studio</span></a
         >
         <ul class="header-menu-list">
           <li class="header-menu-item">
-            <a class="header-menu-link" href="">Studio</a>
+            <a class="header-menu-link" href="./index.html">Studio</a>
           </li>
           <li class="header-menu-item">
             <a class="header-menu-link" href="">Portfolio</a>
