--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
       <nav class="header-navigation">
         <a class="header-logo" href="./index.html"
-          >Web<span class="header-logo-pic" href>Studio</span></a
+          >Web<span class="header-logo-pic">Studio</span></a
         >
         <ul class="header-menu-list">
           <li class="header-menu-item">
@@ -65,7 +65,7 @@
             </p>
           </li>
           <li class="worked-item">
-            <h3 class="wrked-subitle">Punctuality</h3>
+            <h3 class="worked-subitle">Punctuality</h3>
             <p class="worked-item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
